@@ -7,6 +7,7 @@ trunk
 * improved error messages when a free parameter has multiple lbounds/ubounds
 * improved error messages when passing strings into mxModel()
 * improved error messages in mxEval()
+* added omxLocateParameters() function
 
 Release 1.2.0-1926 (February 04, 2012)
 ======================================
